# pdm-companion

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  config.py  hello.py  pyproject.toml  requirements.txt  text.py
.github/workflows/: folder_create.yml  quality.yml  test.yml
docs/: mindmaps.md
marvin/: 01_marvin_examples_web.py  02_models.py
marvin2/: 02_models.py
playground/: 01_marvin_examples_web.py  play_ai.py  play_app.py  play_text.py  playground.py  test_examples.py
pydantic_tutorial/: README.md  pydantic_model_rename.py
resources/: ai.py  text.py
src/pdm-companion/st_pages/: pysearch.py  testimonials.py
src/pdm_companion/resources/: ai.py  text.py
src/pdm_companion/st_pages/: pysearch.py  search_content.py
st_pages/: bobsearch.py  home.py  pysearch.py  pysearch_not_working.py  search_content.py  testimonials.py
tests/: robins_test_examples.py  test_app.py  test_playwright_app.py
tests/resources/: test_ai.py
tests/st_pages/: __init__.py  test_pysearch.py
uv_pkg_mgr_example/: app.py
