[project]
authors = [{name = "kenny-chua", email = "kenny.chua.edu@outlook.com"}]
dependencies = [
    "streamlit-lottie>=0.0.5",
    "streamlit>=1.39.0",
    "watchdog>=5.0.3",
]
description = "Add a short description here"
name = "pdm-companion"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pdm_companion = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
streamlit = ">=1.39.0,<2"
watchdog = ">=5.0.3,<6"
pydantic = ">=2.9.2,<3"
