[project]
name = "pdm-companion"
version = "0.1.0"
description = "Companion App for PDM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair==5.4.1",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "appnope==0.1.4",
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.2.0",
    "blinker==1.8.2",
    "cachetools==5.5.0",
    "cattrs==24.1.2",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "docopt==0.6.2",
    "executing==2.1.0",
    "fastapi==0.115.2",
    "fastjsonschema==2.20.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "idna==3.10",
    "iniconfig==2.0.0",
    "ipython==8.12.3",
    "jedi==0.19.1",
    "jinja2==3.1.4",
    "jiter==0.6.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema-specifications==2024.10.1",
    "jsonschema==4.23.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab-pygments==0.3.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.1",
    "marvin==2.3.7",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.0.2",
    "narwhals==1.9.4",
    "nbclient==0.10.0",
    "nbconvert==7.16.4",
    "nbformat==5.10.4",
    "numpy==2.1.2",
    "openai==1.51.2",
    "packaging==24.1",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "partialjson==0.0.8",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==10.4.0",
    "pip==24.3",
    "pipreqs==0.5.0",
    "platformdirs==4.3.6",
    "playwright==1.48.0",
    "pluggy==1.5.0",
    "pre-commit",
    "prompt-toolkit==3.0.48",
    "protobuf==5.28.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==17.0.0",
    "pybites-search==1.0.0",
    "pydantic-core==2.23.4",
    "pydantic-settings==2.6.0",
    "pydantic==2.9.2",
    "pydeck==0.9.1",
    "pyee==12.0.0",
    "pygments==2.18.0",
    "pytest-base-url==2.1.0",
    "pytest-playwright==0.5.2",
    "pytest==8.3.3",
    "pytest-cov",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "python-dotenv==1.0.1",
    "python-slugify==8.0.4",
    "pytz==2024.2",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "regex==2024.9.11",
    "requests-cache==1.2.1",
    "requests==2.32.3",
    "rich==13.9.2",
    "rpds-py==0.20.0",
    "setuptools==65.5.0",
    "shellingham==1.5.4",
    "six==1.16.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "starlette==0.40.0",
    "streamlit-lottie==0.0.5",
    "streamlit==1.39.0",
    "tenacity==9.0.0",
    "text-unidecode==1.3",
    "tiktoken==0.8.0",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tornado==6.4.1",
    "tqdm==4.66.5",
    "traitlets==5.14.3",
    "typer==0.12.5",
    "types-requests=2.32.0.20241016",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "url-normalize==1.4.3",
    "urllib3==2.2.3",
    "uvicorn==0.32.0",
    "watchdog==5.0.3",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "yarg==0.1.9",
]
author = [
    {name = "Kenny Chua", email = "kenny.chua.edu@outlook.com"}
]


[tool.ruff]
# Set the maximum line length to 100
line-length = 100


[tool.ruff.format]
# Enable reformatting of code snippets in doctrings.
docstring-code-format = true
exclude = ["generated"]
skip-magic-trailing-comma = true


[tool.ruff.lint]
select = ["F", "E", "W", "C", "B", "N"]
ignore = ["E501"]
# Extend with pyupgrade checks
extend-select = ["UP"]


[tool.ruff.lint.isort]
combine-as-imports = true
force-to-top = ["src"]
